Bug 19439 - proxy MUST append Via in responses
Summary: proxy MUST append Via in responses
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_proxy (show other bugs)
Version: 2.0-HEAD
Hardware: All All
: P3 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL: http://coad.measurement-factory.com/c...
Keywords: PatchAvailable
Depends on:
Blocks: 43454
  Show dependency tree
 
Reported: 2003-04-29 20:03 UTC by Co-Advisor
Modified: 2007-10-09 06:52 UTC (History)
0 users



Attachments
test case trace (3 old Vias in response) (6.76 KB, text/html)
2003-04-29 20:04 UTC, Co-Advisor
Details
test case trace (3 old Vias in request) (6.74 KB, text/html)
2003-04-29 20:08 UTC, Co-Advisor
Details
Patch (1.11 KB, patch)
2005-01-25 15:36 UTC, Robert
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Co-Advisor 2003-04-29 20:03:32 UTC
Looks like a possible RFC 2616 MUST violation. The proxy
inserts its Via information in the middle of the Via
response header list instead of appending it at the end.

This violation does not happen when all old Via field-values
are listed within one header (single field-name).  Also, the
proxy seems to handle request headers correctly; only
response headers are affected.

See attached trace(s) for details and ways to reproduce
the violation mentioned above.

Test case IDs in the trace link to human-oriented test case
description and RFC quotes, if available.
Comment 1 Co-Advisor 2003-04-29 20:04:30 UTC
Created attachment 6079 [details]
test case trace (3 old Vias in response)
Comment 2 Co-Advisor 2003-04-29 20:08:24 UTC
Created attachment 6080 [details]
test case trace (3 old Vias in request)
Comment 3 Robert 2005-01-25 15:36:56 UTC
Created attachment 14098 [details]
Patch

The problem is solved by adding this single line. 
If a request gets to the server this function is called, and the header fields
are pooled. This effects the via-fields as can be seen in the request-TestCase.
If a response returns to the proxy server, this polling wasn't done, now it
will be.
Comment 4 Co-Advisor 2005-06-03 22:38:36 UTC
Indeed, httpd-2.0.54 patched with the patch #14098 
merges all Via response headers into one, appends
its own Via, and passes the test case.
Comment 5 Nick Kew 2007-10-09 06:52:17 UTC
Fixed in r583155